<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="image_of_ballot_logo">Image of ballot logo</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="address">Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="un_follow_election">UnFollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="web_icon_image">Web icon image</string>
    <string name="facebook_icon_image">Facebook icon image</string>
    <string name="twitter_icon_image">Twitter icon image</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="access_coarse_location">Permission Required ACCESS_COARSE_LOCATION</string>
    <string name="access_fine_location">Permission Required ACCESS_FINE_LOCATION</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">" You need to grant location permission in order to use this feature."</string>

    <!-- TODO: Add necessary string values -->

</resources>
